--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <!-- <script type="text/javascript" src="js/script.js"></script> -->
     <script src="js/fontawesome.js"></script>
     <script src="js/jquery-3.4.1.js"></script>
-    <script type="text/javascript" src="js/file.js">
-
-    </script>
+    <script type="text/javascript" src="js/file.js"></script>
     
 
       <script type="text/javascript" src="js/mdb.js" async></script>
@@ -99,7 +97,7 @@
               <ul class="listOfIngredients" id="recipe3">
                 <li><input type="checkbox" checked>Tomato Sauce</li>
                 <li><input type="checkbox" checked>Cheese stuffed crust</li>
-                <li><input type="checkbox" checked>Peperoni</li>
+                <li><input type="checkbox" checked>Peperoni«</li>
                 <li><input type="checkbox" checked>spicy crust</li>
                 <li><input type="checkbox" checked>Gluuten Free crust</li>
                 <li><input type="checkbox" checked>Crispy crust</li>
