--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <!-- Menu -->
   <nav class="navbar">
-    <h2 id="logo">Pizza 8Dynasty</h2>
+    <h2 id="logo">Pizza Dynasty</h2>
     <div>
       <label for="cartToggle" class="toggleCart btnStyle btnStyle2"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
         <i class="fa fa-circle" aria-hidden="true"></i>
