--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
 
       <!-- Recipe 1 -->
       <div class="recipe">
-        <p class="name">Large    </p>
+        <p class="name">Large</p>
         <img src="https://wallpapercave.com/wp/wp3603181.jpg">
         <a class="btnStyle3 btnStyle addToCart" id="addToCartLarge">Add to Cart</a>
         <p class="price"><span>15</span>$</p>
         <div id="checkOrderLarge" title="large">
-          <h3 class="listHeading">List of Ingredients:</h3>
+          <h3 class="listHeading">List of      a Ingredients:</h3>
           <ul class="listOfIngredients" id="recipe1">
             <li><input type="checkbox" checked>Glutten Free crust</li>
             <li><input type="checkbox" checked>Crispy crust</li>
