--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <a class="btnStyle3 btnStyle addToCart" id="addToCartLarge">Add to Cart</a>
         <p class="price"><span>15</span>$</p>
         <div id="checkOrderLarge" title="large">
-          <h3 class="listHeading">List of      a Ingredients:</h3>
+          <h3 class="listHeading">List of Ingredients:</h3>
           <ul class="listOfIngredients" id="recipe1">
             <li><input type="checkbox" checked>Glutten Free crust</li>
             <li><input type="checkbox" checked>Crispy crust</li>
