--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <li><input type="checkbox" checked>Glutten Free crust</li>
             <li><input type="checkbox" checked>Crispy crust</li>
             <li><input type="checkbox" checked>Thin crust</li>
-            <li><input type="checkbox" checked>Thic crust</li>
+            <li><input type="checkbox" checked>Thicker crust</li>
             <li><input type="checkbox" checked>Focaccia</li>
           </ul>
           <a class="btnStyle3 btnStyle addIngredient">Add Ingredient</a>
