--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h3>List of orders: <span>0$</span></h3>
       <ol id="listOfOrders">
       </ol>
-      <a class="btnStyle btnStyle3 finishOrder">Finish  Order</a>
+      <a class="btnStyle btnStyle3 finishOrder">Finish a Order</a>
     </nav>
 
     <div class="recipe-menu">
@@ -56,7 +56,7 @@
             <li><input type="checkbox" checked>Glutten Free crust</li>
             <li><input type="checkbox" checked>Crispy crust</li>
             <li><input type="checkbox" checked>Thin crust</li>
-            <li><input type="checkbox" checked>Thicker crust</li>
+            <li><input type="checkbox" checked>Thick crust</li>
             <li><input type="checkbox" checked>Focaccia</li>
           </ul>
           <a class="btnStyle3 btnStyle addIngredient">Add Ingredient</a>
