--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <li><input type="checkbox" checked>Thick crust</li>
             <li><input type="checkbox" checked>Focaccia</li>
           </ul>
-          <a class="btnStyle3 btnStyle addIngredient">Add Ingredient</a>
+          <a class="btnStyle3 btnStyle addIngredient">Add the  Ingredient</a>
           <a class="btnStyle listOver">Done</a>
           <h4 class="totalDialog" id="totalDialog1">Total: <span>15</span>$</h4>
         </div>
