added a focaccia crust

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div id="checkOrderMedium" title="Medium">
           <h3 class="listHeading">List of Ingredients:</h3>
           <ul class="listOfIngredients" id="recipe2">
-            <li><input type="checkbox" checked>Plain Crust</li>
+            <li><input type="checkbox" checked>Plainest Crust</li>
             <li><input type="checkbox" checked>Garlic butter crust </li>
             <li><input type="checkbox" checked>Cheese stuffed crust</li>
             <li><input type="checkbox" checked>Focaccia</li>
