--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <a class="btnStyle3 btnStyle addToCart" id="addToCartPizza">Add to Cart</a>
         <p class="price"><span>18</span>$</p>
         <div id="checkOrderPizza" title="Pizza">
-          <h3 class="listHeading">List of my khIngredients:</h3>
+          <h3 class="listHeading">List of my Ingredients:</h3>
           <ul class="listOfIngredients" id="recipe3">
             <li><input type="checkbox" checked>Tomato Sauce</li>
             <li><input type="checkbox" checked>Cheese stuffed crust</li>
