added a thanks message

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <li><input type="checkbox" checked>Cheese stuffed crust</li>
             <li><input type="checkbox" checked>Peperoni«</li>
             <li><input type="checkbox" checked>spicy crust</li>
-            <li><input type="checkbox" checked>Gluuten Free crust</li>
+            <li><input type="checkbox" checked>Glutten Free crust</li>
             <li><input type="checkbox" checked>Crispy crust</li>
           </ul>
           <a class="btnStyle3 btnStyle addIngredient">Add Ingredient</a>
@@ -127,7 +127,7 @@
 
   <div id="thanksMessage">
     <h1>Thank you for the order</h1>
-    <h3>We will have it delivered soon</h3>
+    <h3>We will have it  delivered soon</h3>
   </div>
   </div>
 
