--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
   <div id="thanksMessage">
     <h1>Thank you for the order</h1>
-    <h3>We will have it  delivered soon</h3>
+    <h3>We will have it delivered to  soon</h3>
   </div>
   </div>
 
