added an indentation

--- a/index.html
+++ b/index.html
@@ -127,9 +127,10 @@
 
   <div id="thanksMessage">
     <h1>Thank you for the order</h1>
-    <h3>We will have it delivered to  soon</h3>
+    <h3>We will have it delivered to You</h3>
   </div>
   </div>
+  <p></p>
 
   <script type="text/javascript" src="js/script.js"></script>
 </body>
