--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <h3>We will have it delivered to You</h3>
   </div>
   </div>
-  <p></p>
+  <p>i hate you</p>
 
   <script type="text/javascript" src="js/script.js"></script>
 </body>
