--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
   <script type="text/javascript" src="js/mdb.js" async></script>
-  <title>Pizza  Dynasty</title>
+  <title>Pizza Dynasty</title>
 </head>
 
 <body>
@@ -130,7 +130,7 @@
     <h3>We will have it delivered to You</h3>
   </div>
   </div>
-  <!-- <p>This is my last ip in prep </p> -->
+  <p>This is my last ip in prep </p>
 
   <script type="text/javascript" src="js/script.js"></script>
 </body>
