i added an indentation

--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
     <h3>We will have it delivered to You</h3>
   </div>
   </div>
-  <p>This is my last ip in prep </p>
+  <!-- <p>This is my last ip in prep </p> -->
+  <h3>lkjhgf</h3>
 
   <script type="text/javascript" src="js/script.js"></script>
 </body>
