added another  placeholder

--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
   <div id="thanksMessage">
     <h1>Thank you for the order</h1>
     <h3>We will have it delivered to You</h3>
+    <h4>This is Pizza Dynasty</h4>
   </div>
   </div>
   <!-- <p>This is my last ip in prep </p> -->
