added another  placeholder

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <input type="text" id="buyerName" placeholder="Enter Name">
       <input type="text" id="buyerNumber" placeholder="Enter Phone Number">
       <input type="text" id="buyerAddress" placeholder="Enter Address">
-      <input type="text" id="buyerLocation" placeholder="Enter Your estate">
+      <input type="text" id="buyerLocation" placeholder="Enter Your estate details">
       <a class="btnStyle order">Order!</a>
     </div>
   </div>
