added a new price

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </ul>
           <a class="btnStyle3 btnStyle addIngredient">Add Ingredient</a>
           <a class="btnStyle listOver">Done</a>
-          <h4 class="totalDialog" id="totalDialog1">Total: <span>1500</span>/=</h4>
+          <h4 class="totalDialog" id="totalDialog1">Total: <span>1500</span>$</h4>
         </div>
       </div>
 
@@ -70,7 +70,7 @@
         <p class="name">Medium</p>
         <img src="https://wallpapercave.com/wp/wp3603170.jpg">
         <a class="btnStyle3 btnStyle addToCart" id="addToCartMedium">Add to Cart</a>
-        <p class="price"><span>1600</span>/=</p>
+        <p class="price"><span>1500</span>/=</p>
         <div id="checkOrderMedium" title="Medium">
           <h3 class="listHeading">List of Ingredients:</h3>
           <ul class="listOfIngredients" id="recipe2">
@@ -82,7 +82,7 @@
           </ul>
           <a class="btnStyle3 btnStyle addIngredient">Add Ingredient</a>
           <a class="btnStyle listOver">Done</a>
-          <h4 class="totalDialog" id="totalDialog2">Total: <span>1600</span>/=</h4>
+          <h4 class="totalDialog" id="totalDialog2">Total: <span>15</span>$</h4>
         </div>
       </div>
 
@@ -104,7 +104,7 @@
           </ul>
           <a class="btnStyle3 btnStyle addIngredient">Add Ingredient</a>
           <a class="btnStyle listOver">Done</a>
-          <h4 class="totalDialog" id="totalDialog3">Total: <span>1800</span>/=</h4>
+          <h4 class="totalDialog" id="totalDialog3">Total: <span>18</span>$</h4>
         </div>
       </div>
 
