--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <!-- Recipe 3 -->
       <div class="recipe">
         <p class="name">Small</p>
-        <img src="https://i.kinja-img.com/gawker-media/image/upload/wafswectpmbr0zmug9ly.jpg">
+        <img src="https://wallpapercave.com/w/wp4696113">
         <a class="btnStyle3 btnStyle addToCart" id="addToCartPizza">Add to Cart</a>
         <p class="price"><span>1800</span>/=</p>
         <div id="checkOrderPizza" title="Pizza">
